tests/ui/imports/private-import-suggestion-path-156244-edition2015.stderr
error[E0603]: struct import `One` is private
  --> $DIR/private-import-suggestion-path-156244-edition2015.rs:16:14
   |
LL |     use two::One;
   |              ^^^ private struct import
   |
note: the struct import `One` is defined here...
  --> $DIR/private-import-suggestion-path-156244-edition2015.rs:12:9
   |
LL |     use one::One;
   |         ^^^^^^^^
note: ...and refers to the struct `One` which is defined here
  --> $DIR/private-import-suggestion-path-156244-edition2015.rs:8:5
   |
LL |     pub struct One();
   |     ^^^^^^^^^^^^^^^^^ you could import this directly
help: import `One` through the re-export
   |
LL -     use two::One;
LL +     use one::One;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0603`.
